--- a/templates/index.html
+++ b/templates/index.html
@@ -300,7 +300,7 @@
                         src="assets/images/logo/logo-white1-fav.png" alt="logo" />
                     <div class="footer-col-content-wrapper">
                         <p class="footer-text-about-us ">
-                            De l’étape d’avant projet à l’étape de réalisation effective!
+                            De l'étape d'avant projet à l'étape de réalisation effective!
 
                         </p>
                     </div>
