--- a/templates/pages/chat.jinja
+++ b/templates/pages/chat.jinja
@@ -5,7 +5,7 @@
 {% block content %}
 <section class="chat-area">
     <header>
-        <a href="{{ url_for('users') }}" class="back-icon"><i class="fas fa-arrow-left"></i></a>
+        <a href="{{ url_for('chat.users') }}" class="back-icon"><i class="fas fa-arrow-left"></i></a>
         <img src="{{ url_for('static',filename='images/profile.jpg') }}" alt="">
         <div class="details">
             <span>
