--- a/templates/pages/login.jinja
+++ b/templates/pages/login.jinja
@@ -20,7 +20,7 @@
             <input type="submit" name="submit" value="Continue to Chat">
         </div>
     </form>
-    <div class="link">Not yet signed up? <a href="{{ url_for('signup') }}">Signup now</a></div>
+    <div class="link">Not yet signed up? <a href="{{ url_for('user.signup') }}">Signup now</a></div>
 </section>
 {% endblock %}
 
