--- a/templates/pages/signup.jinja
+++ b/templates/pages/signup.jinja
@@ -5,7 +5,7 @@
 {% block content %}
 <section class="form signup">
     <header>Realtime Chat App</header>
-    <form action="{{ url_for('register') }}" method="POST" enctype="multipart/form-data" autocomplete="off">
+    <form action="{{ url_for('user.register') }}" method="POST" enctype="multipart/form-data" autocomplete="off">
         <div class="error-text">{{ error }}</div>
         <div class="name-details">
             <div class="field input">
@@ -34,7 +34,7 @@
             <input type="submit" name="submit" value="Continue to Chat">
         </div>
     </form>
-    <div class="link">Already signed up? <a href="{{ url_for('signin') }}">Login now</a></div>
+    <div class="link">Already signed up? <a href="{{ url_for('user.signin') }}">Login now</a></div>
 </section>
 {% endblock %}
 
